--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -13,13 +13,13 @@ Macro Multi Export
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
+<td class="ctEven left macro-description">Export selected bodies to multiple file formats (STL, STEP, 3MF, OBJ, IGES, BREP, PLY, AMF) simultaneously with a user-friendly dialog for format selection and output configuration.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.21+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/1/19/Macro_Multi_Export.png/48px-Macro_Multi_Export.png">ToolBar Icon</a><br>Author: Spkane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
 </th></tr>
 <tr>
-<td class="ctEven macro-author"><a href="index.php?title=User;Sean_P._Kane&amp;action=edit&amp;redlink=1.html" class="new" title="User:Sean P. Kane (page does not exist)">Sean P. Kane</a>
+<td class="ctEven macro-author"><a href="index.php?title=User;Spkane&amp;action=edit&amp;redlink=1.html" class="new" title="User:Spkane (page does not exist)">Spkane</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Download
@@ -101,7 +101,7 @@ Macro Multi Export
 <li>Enter a base filename (the format extension will be appended automatically)</li>
 <li>Optionally adjust mesh tolerance settings for mesh-based formats</li></ul></li>
 <li>Click "Export" to create the files</li></ol>
-<figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260106014550&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="568" class="mw-file-element" data-file-width="1002" data-file-height="1424"></a><figcaption></figcaption></figure>
+<figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260119180351&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="556" class="mw-file-element" data-file-width="1002" data-file-height="1392"></a><figcaption></figcaption></figure>
 <h2><span class="mw-headline" id="Requirements">Requirements</span></h2>
 <ul><li>FreeCAD 0.21 or later</li>
 <li>Objects with solid shapes (Part or PartDesign bodies)</li></ul>
@@ -129,15 +129,15 @@ Macro Multi Export
 <li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119175310
+Cached time: 20260119182033
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.263 seconds
+CPU time usage: 0.066 seconds
+Real time usage: 0.211 seconds
 Preprocessor visited node count: 135/1000000
-Post&#8208;expand include size: 2532/2097152 bytes
-Template argument size: 830/2097152 bytes
+Post&#8208;expand include size: 2508/2097152 bytes
+Template argument size: 806/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -145,12 +145,12 @@ Unstrip post&#8208;expand size: 852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.663      1 -total
- 72.59%    2.659      1 Template:Macro
- 22.46%    0.823      3 Template:FileName
+100.00%    8.342      1 -total
+ 62.19%    5.188      1 Template:Macro
+ 33.38%    2.785      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260119175315 and revision id 1741029. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260119182047 and revision id 1741035. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
