--- a/wiki/fr/Release_notes_1.1.html
+++ b/wiki/fr/Release_notes_1.1.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.1/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.1&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--high" title="Versionshinweise 1.1 (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--complete" title="Versionshinweise 1.1 (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Release_notes_1.1.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.1 (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--med" title="Note di rilascio della versione 1.1 (42% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--high" title="Informacje o wydaniu 1.1 (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--complete" title="Informacje o wydaniu 1.1 (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--low" title="&#1055;&#1088;&#1080;&#1084;&#1077;&#1095;&#1072;&#1085;&#1080;&#1103; &#1082; &#1074;&#1099;&#1087;&#1091;&#1089;&#1082;&#1091; 1.1 (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--med" title="&#31532;1.1&#29256;&#12522;&#12522;&#12540;&#12473;&#12494;&#12540;&#12488; (43% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div class="warning-box">FreeCAD 1.1 est en cours de d&eacute;veloppement, il n'y a pas encore de date de sortie pr&eacute;vue.</div>
@@ -418,9 +418,7 @@
 <p><span id="Material_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Atelier_Material">Atelier Material</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>Les mat&eacute;riaux peuvent d&eacute;sormais &ecirc;tre stock&eacute;s dans des bases de donn&eacute;es externes. Cette fonction est exp&eacute;rimentale et doit &ecirc;tre activ&eacute;e explicitement lors de la compilation du code source. Elle n'est pas disponible dans les versions standard de FreeCAD. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull request #21047</a></li></ul>
-</div>
 <p><span id="Further_Material_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_Material"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Material">Autres am&eacute;liorations de Material</span></h3>
@@ -578,35 +576,35 @@
 <li>L'alignement des esquisses dans l'exportation SVG et l'ancienne exportation DXF ont &eacute;t&eacute; corrig&eacute;s. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19765">Pull request #19765</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119134638
+Cached time: 20260119183113
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.378 seconds
-Real time usage: 1.754 seconds
-Preprocessor visited node count: 630/1000000
+CPU time usage: 0.357 seconds
+Real time usage: 1.568 seconds
+Preprocessor visited node count: 629/1000000
 Post&#8208;expand include size: 3666/2097152 bytes
 Template argument size: 614/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1550/5000000 bytes
+Unstrip post&#8208;expand size: 1564/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   76.378      1 -total
- 32.34%   24.699      2 Template:PropertyData
- 22.69%   17.332      2 Template:Variable
- 12.86%    9.825      2 Template:Message
- 11.75%    8.976      1 Template:VersionMinus/fr
-  7.99%    6.099      1 Template:Incode
-  7.66%    5.854      1 Template:TOCright
-  7.14%    5.452      1 Template:VersionPlus/fr
-  6.66%    5.089      1 Template:VeryImportantMessage
-  6.28%    4.798      5 Template:KEY
+100.00%  103.412      1 -total
+ 20.03%   20.713      5 Template:KEY
+ 16.59%   17.157      2 Template:Message
+ 14.62%   15.114      1 Template:TOCright
+ 14.28%   14.769      2 Template:PropertyData
+ 10.48%   10.834      2 Template:FileName
+  8.96%    9.263      1 Template:Incode
+  8.41%    8.696      1 Template:VeryImportantMessage
+  7.72%    7.987      2 Template:Variable
+  7.42%    7.672      1 Template:VersionPlus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:364062-0!canonical and timestamp 20260119134637 and revision id 1740945. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:364062-0!canonical and timestamp 20260119183111 and revision id 1741039. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
